--- a/hyphoto/horizon.html
+++ b/hyphoto/horizon.html
@@ -1,103 +1,105 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <title>Near the Horizon - HYPhoto</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-<link rel="stylesheet" href="assets/css/main.css">
-<noscript>
-        <link rel="stylesheet" href="assets/css/noscript.css">
-</noscript>
 <!-- Scripts -->
 <script src="assets/js/jquery.min.js"></script>
-<script src="assets/js/jquery.poptrox.min.js"></script>
 <script src="assets/js/browser.min.js"></script>
 <script src="assets/js/breakpoints.min.js"></script>
-<script src="assets/js/util.js"></script>
 
-<body class="is-preload">
-        <!-- Wrapper -->
-        <div id="wrapper">
-                <!-- Header -->
-                <header id="header">
-                        <h1>
-                                <strong>HYPhoto</strong> Near the Horizon
-                        </h1>
-                        <nav>
-                                <ul>
-                                        <li>
-                                                <a href="https://frankieyuan.com/photo.html" class="icon fa-home">Home
-                                                        Page</a>
-                                </ul>
-                        </nav>
-                </header>
-                <!-- Main -->
-                <div id="main">
-                        <article class="thumb">
-                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/horizon/facing-horizon-min.jpg" class="image">
-                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/horizon/facing-horizon-min.jpg" alt="">
-                                </a>
-                                <h2>facing the horizon</h2>
-                                <p>
-                        </article>
-                        <article class="thumb">
-                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/horizon/tender-min.jpg" class="image">
-                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/horizon/tender-min.jpg" alt="">
-                                </a>
-                                <h2>tender</h2>
-                                <p>
-                        </article>
-                        <article class="thumb">
-                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/horizon/soft-min.jpg
+<body>
+    <!-- Wrapper -->
+    <div id="wrapper">
+        <!-- Header -->
+        <header id="header">
+            <h1>
+                <strong>HYPhoto</strong> Near the Horizon
+            </h1>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="https://frankieyuan.com/photo.html" class="icon fa-home">
+                            Home
+                            Page
+                        </a>
+                </ul>
+            </nav>
+        </header>
+        <!-- Main -->
+        <div id="main">
+            <article class="thumb">
+                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/horizon/facing-horizon-min.jpg" class="image">
+                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/horizon/facing-horizon-min.jpg" alt="">
+                </a>
+                <h2>facing the horizon</h2>
+                <p>
+            </article>
+            <article class="thumb">
+                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/horizon/tender-min.jpg" class="image">
+                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/horizon/tender-min.jpg" alt="">
+                </a>
+                <h2>tender</h2>
+                <p>
+            </article>
+            <article class="thumb">
+                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/horizon/soft-min.jpg
                                 " class="image">
-                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/horizon/soft-min.jpg
+                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/horizon/soft-min.jpg
                                         " alt="">
-                                </a>
-                                <h2>soft</h2>
-                                <p>
-                        </article>
-                        <article class="thumb">
-                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/horizon/LightHouse-min.jpg
+                </a>
+                <h2>soft</h2>
+                <p>
+            </article>
+            <article class="thumb">
+                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/horizon/LightHouse-min.jpg
                                 " class="image">
-                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/horizon/LightHouse-min.jpg
+                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/horizon/LightHouse-min.jpg
                                         " alt="">
-                                </a>
-                                <h2>LightHouse</h2>
-                                <p>
-                        </article>
-                        <article class="thumb">
-                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/horizon/across-min.jpg
+                </a>
+                <h2>LightHouse</h2>
+                <p>
+            </article>
+            <article class="thumb">
+                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/horizon/across-min.jpg
                                 " class="image">
-                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/horizon/across-min.jpg
+                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/horizon/across-min.jpg
                                         " alt="">
-                                </a>
-                                <h2>across</h2>
-                                <p>
-                        </article>
-                        <article class="thumb">
-                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/horizon/Industrial-Horizon-min.jpg
+                </a>
+                <h2>across</h2>
+                <p>
+            </article>
+            <article class="thumb">
+                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/horizon/Industrial-Horizon-min.jpg
                                 " class="image">
-                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/horizon/Industrial-Horizon-min.jpg
+                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/horizon/Industrial-Horizon-min.jpg
                                         " alt="">
-                                </a>
-                                <h2>Industrial Horizon</h2>
-                                <p>
-                        </article>
-                        <article class="thumb">
-                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/horizon/Xinghai-Bay-min.jpg
+                </a>
+                <h2>Industrial Horizon</h2>
+                <p>
+            </article>
+            <article class="thumb">
+                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/horizon/Xinghai-Bay-min.jpg
                                 " class="image">
-                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/horizon/Xinghai-Bay-min.jpg
+                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/horizon/Xinghai-Bay-min.jpg
                                         " alt="">
-                                </a>
-                                <h2>Xinghai Bay</h2>
-                                <p>
-                        </article>
-                        <article class="thumb">
-                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/horizon/Hakone-Sunrise-min.jpg" class="image">
-                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/horizon/Hakone-Sunrise-min.jpg" alt="">
-                                </a>
-                                <h2>Hakone Sunrise</h2>
-                                <p>
-                        </article>
-                </div>
+                </a>
+                <h2>Xinghai Bay</h2>
+                <p>
+            </article>
+            <article class="thumb">
+                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/horizon/Hakone-Sunrise-min.jpg" class="image">
+                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/horizon/Hakone-Sunrise-min.jpg" alt="">
+                </a>
+                <h2>Hakone Sunrise</h2>
+                <p>
+            </article>
         </div>
-        <!-- Scripts -->
-        <script src="assets/js/main.js"></script>
+    </div>
+    <!-- Scripts -->
+    <script src="assets/js/main.js"></script>
+    <script src="assets/js/jquery.poptrox.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <link rel="stylesheet" href="assets/css/main.css">
+    <noscript>
+        <link rel="stylesheet" href="assets/css/noscript.css">
+    </noscript>
