--- a/hyphoto/lightfiredream.html
+++ b/hyphoto/lightfiredream.html
@@ -1,85 +1,88 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <title>Light, Fire, Dream - HYPhoto</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-<link rel="stylesheet" href="assets/css/main.css">
-<noscript>
-        <link rel="stylesheet" href="assets/css/noscript.css">
-</noscript>
 <!-- Scripts -->
 <script src="assets/js/jquery.min.js"></script>
-<script src="assets/js/jquery.poptrox.min.js"></script>
 <script src="assets/js/browser.min.js"></script>
 <script src="assets/js/breakpoints.min.js"></script>
-<script src="assets/js/util.js"></script>
-<body class="is-preload">
-        <!-- Wrapper -->
-        <div id="wrapper">
-                <!-- Header -->
-                <header id="header">
-                        <h1>
-                                <strong>HYPhoto</strong> Light, Fire, Dream
-                        </h1>
-                        <nav>
-                                <ul>
-                                        <li>
-                                                <a href="https://frankieyuan.com/photo.html" class="icon fa-home">Home
-                                                        Page</a>
-                                </ul>
-                        </nav>
-                </header>
-                <!-- Main -->
-                <div id="main">
-                        <article class="thumb">
-                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lightfiredream/disney1.jpg" class="image">
-                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lightfiredream/disney1.jpg" alt="">
-                                </a>
-                                <h2>To brave explorers</h2>
-                                <p>
-                        </article>
-                        <article class="thumb">
-                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lightfiredream/disney2.jpg" class="image">
-                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lightfiredream/disney2.jpg" alt="">
-                                </a>
-                                <h2>To those "fools"</h2>
-                                <p>
-                        </article>
-                        <article class="thumb">
-                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lightfiredream/disney3.jpg" class="image">
-                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lightfiredream/disney3.jpg" alt="">
-                                </a>
-                                <h2>To those who dream big</h2>
-                                <p>
-                        </article>
-                        <article class="thumb">
-                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lightfiredream/3.jpg" class="image">
-                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lightfiredream/3.jpg" alt="">
-                                </a>
-                                <h2>fight</h2>
-                                <p>
-                        </article>
-                        <article class="thumb">
-                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lightfiredream/2.jpg" class="image">
-                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lightfiredream/2.jpg" alt="">
-                                </a>
-                                <h2>star and light</h2>
-                                <p>
-                        </article>
-                        <article class="thumb">
-                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lightfiredream/1.jpg" class="image">
-                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lightfiredream/1.jpg" alt="">
-                                </a>
-                                <h2>trace of light</h2>
-                                <p>
-                        </article>
-                        <article class="thumb">
-                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lightfiredream/japanhouse.jpg" class="image">
-                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lightfiredream/japanhouse.jpg" alt="">
-                                </a>
-                                <h2>Japan House's 20th anniversary</h2>
-                                <p>
-                        </article>
-                </div>
+
+<body>
+    <!-- Wrapper -->
+    <div id="wrapper">
+        <!-- Header -->
+        <header id="header">
+            <h1>
+                <strong>HYPhoto</strong> Light, Fire, Dream
+            </h1>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="https://frankieyuan.com/photo.html" class="icon fa-home">
+                            Home
+                            Page
+                        </a>
+                </ul>
+            </nav>
+        </header>
+        <!-- Main -->
+        <div id="main">
+            <article class="thumb">
+                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lightfiredream/disney1.jpg" class="image">
+                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lightfiredream/disney1.jpg" alt="">
+                </a>
+                <h2>To brave explorers</h2>
+                <p>
+            </article>
+            <article class="thumb">
+                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lightfiredream/disney2.jpg" class="image">
+                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lightfiredream/disney2.jpg" alt="">
+                </a>
+                <h2>To those "fools"</h2>
+                <p>
+            </article>
+            <article class="thumb">
+                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lightfiredream/disney3.jpg" class="image">
+                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lightfiredream/disney3.jpg" alt="">
+                </a>
+                <h2>To those who dream big</h2>
+                <p>
+            </article>
+            <article class="thumb">
+                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lightfiredream/3.jpg" class="image">
+                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lightfiredream/3.jpg" alt="">
+                </a>
+                <h2>fight</h2>
+                <p>
+            </article>
+            <article class="thumb">
+                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lightfiredream/2.jpg" class="image">
+                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lightfiredream/2.jpg" alt="">
+                </a>
+                <h2>star and light</h2>
+                <p>
+            </article>
+            <article class="thumb">
+                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lightfiredream/1.jpg" class="image">
+                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lightfiredream/1.jpg" alt="">
+                </a>
+                <h2>trace of light</h2>
+                <p>
+            </article>
+            <article class="thumb">
+                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lightfiredream/japanhouse.jpg" class="image">
+                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/lightfiredream/japanhouse.jpg" alt="">
+                </a>
+                <h2>Japan House's 20th anniversary</h2>
+                <p>
+            </article>
         </div>
-        <!-- Scripts -->
-        <script src="assets/js/main.js"></script>
+    </div>
+    <!-- Scripts -->
+    <script src="assets/js/main.js"></script>
+    <script src="assets/js/jquery.poptrox.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <link rel="stylesheet" href="assets/css/main.css">
+    <noscript>
+        <link rel="stylesheet" href="assets/css/noscript.css">
+    </noscript>
