--- a/hyphoto/uncate.html
+++ b/hyphoto/uncate.html
@@ -1,111 +1,113 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <title>Cannot be Categorized - HYPhoto</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-<link rel="stylesheet" href="assets/css/main.css">
-<noscript>
-        <link rel="stylesheet" href="assets/css/noscript.css">
-</noscript>
 <!-- Scripts -->
 <script src="assets/js/jquery.min.js"></script>
-<script src="assets/js/jquery.poptrox.min.js"></script>
 <script src="assets/js/browser.min.js"></script>
 <script src="assets/js/breakpoints.min.js"></script>
-<script src="assets/js/util.js"></script>
 
-<body class="is-preload">
-        <!-- Wrapper -->
-        <div id="wrapper">
-                <!-- Header -->
-                <header id="header">
-                        <h1>
-                                <strong>HYPhoto</strong> Cannot be Categorized
-                        </h1>
-                        <nav>
-                                <ul>
-                                        <li>
-                                                <a href="https://frankieyuan.com/photo.html" class="icon fa-home">Home
-                                                        Page</a>
-                                </ul>
-                        </nav>
-                </header>
-                <!-- Main -->
-                <div id="main">
-                        <article class="thumb">
-                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/uncate/UW-sakura-min.jpg" class="image">
-                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/uncate/UW-sakura-min.jpg"
-                                                alt="">
-                                </a>
-                                <h2>UW Sakura</h2>
-                                <p>
-                        </article>
-                        <article class="thumb">
-                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/uncate/winterchicago-min.jpg" class="image">
-                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/uncate/winterchicago-min.jpg"
-                                                alt="">
-                                </a>
-                                <h2>fire in chicago's winter</h2>
-                                <p>
-                        </article>
-                        <article class="thumb">
-                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/uncate/fallchampaign-min.jpg" class="image">
-                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/uncate/fallchampaign-min.jpg"
-                                                alt="">
-                                </a>
-                                <h2>fall champaign</h2>
-                                <p>
-                        </article>
-                        <article class="thumb">
-                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/uncate/UofI-South-Quad-min.jpg" class="image">
-                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/uncate/UofI-South-Quad-min.jpg"
-                                                alt="">
-                                </a>
-                                <h2>UofI South Quad</h2>
-                                <p>
-                        </article>
-                        <article class="thumb">
-                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/uncate/sunriseWestLake-min.jpg" class="image">
-                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/uncate/sunriseWestLake-min.jpg"
-                                                alt="">
-                                </a>
-                                <h2>sunrise west lake</h2>
-                                <p>
-                        </article>
-                        <article class="thumb">
-                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/uncate/roof-min.jpg"
-                                        class="image">
-                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/uncate/roof-min.jpg"
-                                                alt="">
-                                </a>
-                                <h2>roof</h2>
-                                <p>
-                        </article>
-                        <article class="thumb">
-                                        <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/uncate/Lake-Michigan-min.jpg" class="image">
-                                                <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/uncate/Lake-Michigan-min.jpg"
-                                                        alt="">
-                                        </a>
-                                        <h2>lake michigan</h2>
-                                        <p>
-                                </article>
-                                <article class="thumb">
-                                        <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/uncate/Jiuzhaigou-min.jpg" class="image">
-                                                <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/uncate/Jiuzhaigou-min.jpg"
-                                                        alt="">
-                                        </a>
-                                        <h2>jiuzhaigou</h2>
-                                        <p>
-                                </article>        
-                        <article class="thumb">
-                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/uncate/Air-CHINA-min.jpg"
-                                        class="image">
-                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/uncate/Air-CHINA-min.jpg"
-                                                alt="">
-                                </a>
-                                <h2>air china</h2>
-                                <p>
-                        </article>
-                </div>
+<body>
+    <!-- Wrapper -->
+    <div id="wrapper">
+        <!-- Header -->
+        <header id="header">
+            <h1>
+                <strong>HYPhoto</strong> Cannot be Categorized
+            </h1>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="https://frankieyuan.com/photo.html" class="icon fa-home">
+                            Home
+                            Page
+                        </a>
+                </ul>
+            </nav>
+        </header>
+        <!-- Main -->
+        <div id="main">
+            <article class="thumb">
+                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/uncate/UW-sakura-min.jpg" class="image">
+                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/uncate/UW-sakura-min.jpg"
+                         alt="">
+                </a>
+                <h2>UW Sakura</h2>
+                <p>
+            </article>
+            <article class="thumb">
+                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/uncate/winterchicago-min.jpg" class="image">
+                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/uncate/winterchicago-min.jpg"
+                         alt="">
+                </a>
+                <h2>fire in chicago's winter</h2>
+                <p>
+            </article>
+            <article class="thumb">
+                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/uncate/fallchampaign-min.jpg" class="image">
+                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/uncate/fallchampaign-min.jpg"
+                         alt="">
+                </a>
+                <h2>fall champaign</h2>
+                <p>
+            </article>
+            <article class="thumb">
+                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/uncate/UofI-South-Quad-min.jpg" class="image">
+                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/uncate/UofI-South-Quad-min.jpg"
+                         alt="">
+                </a>
+                <h2>UofI South Quad</h2>
+                <p>
+            </article>
+            <article class="thumb">
+                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/uncate/sunriseWestLake-min.jpg" class="image">
+                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/uncate/sunriseWestLake-min.jpg"
+                         alt="">
+                </a>
+                <h2>sunrise west lake</h2>
+                <p>
+            </article>
+            <article class="thumb">
+                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/uncate/roof-min.jpg"
+                   class="image">
+                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/uncate/roof-min.jpg"
+                         alt="">
+                </a>
+                <h2>roof</h2>
+                <p>
+            </article>
+            <article class="thumb">
+                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/uncate/Lake-Michigan-min.jpg" class="image">
+                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/uncate/Lake-Michigan-min.jpg"
+                         alt="">
+                </a>
+                <h2>lake michigan</h2>
+                <p>
+            </article>
+            <article class="thumb">
+                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/uncate/Jiuzhaigou-min.jpg" class="image">
+                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/uncate/Jiuzhaigou-min.jpg"
+                         alt="">
+                </a>
+                <h2>jiuzhaigou</h2>
+                <p>
+            </article>
+            <article class="thumb">
+                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/uncate/Air-CHINA-min.jpg"
+                   class="image">
+                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/uncate/Air-CHINA-min.jpg"
+                         alt="">
+                </a>
+                <h2>air china</h2>
+                <p>
+            </article>
         </div>
-        <!-- Scripts -->
-        <script src="assets/js/main.js"></script>
+    </div>
+    <!-- Scripts -->
+    <script src="assets/js/main.js"></script>
+    <script src="assets/js/jquery.poptrox.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <link rel="stylesheet" href="assets/css/main.css">
+    <noscript>
+        <link rel="stylesheet" href="assets/css/noscript.css">
+    </noscript>
