--- a/hyphoto/cosplay.html
+++ b/hyphoto/cosplay.html
@@ -1,118 +1,120 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <title>Cosplay - Frankie Portrait</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-<link rel="stylesheet" href="assets/css/main.css">
-<noscript>
-        <link rel="stylesheet" href="assets/css/noscript.css">
-</noscript>
 <!-- Scripts -->
 <script src="assets/js/jquery.min.js"></script>
-<script src="assets/js/jquery.poptrox.min.js"></script>
 <script src="assets/js/browser.min.js"></script>
 <script src="assets/js/breakpoints.min.js"></script>
-<script src="assets/js/util.js"></script>
 
-<body class="is-preload">
-        <!-- Wrapper -->
-        <div id="wrapper">
-                <!-- Header -->
-                <header id="header">
-                        <h1>
-                                <strong>Frankie Portrait</strong> Cosplay
-                        </h1>
-                        <nav>
-                                <ul>
-                                        <li>
-                                                <a href="https://frankieyuan.com/photo.html" class="icon fa-home">Home
-                                                        Page</a>
-                                </ul>
-                        </nav>
-                </header>
-                <!-- Main -->
-                <div id="main">
-                        <article class="thumb">
-                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/cosplay/kda1-min.jpg"
-                                        class="image">
-                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/cosplay/kda1-min.jpg"
-                                                alt="">
-                                </a>
-                                <h2>KDA Widow by 爆炸糖</h2>
-                                <p>
-                        </article>
-                        <article class="thumb">
-                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/cosplay/kda2-min.jpg"
-                                        class="image">
-                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/cosplay/kda2-min.jpg"
-                                                alt="">
-                                </a>
-                                <h2></h2>
-                                <p>
-                        </article>
-                        <article class="thumb">
-                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/cosplay/kda3-min.jpg"
-                                        class="image">
-                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/cosplay/kda3-min.jpg"
-                                                alt="">
-                                </a>
-                                <h2></h2>
-                                <p>
-                        </article>
-                        <article class="thumb">
-                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/cosplay/kda4-min.jpg"
-                                        class="image">
-                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/cosplay/kda4-min.jpg"
-                                                alt="">
-                                </a>
-                                <h2></h2>
-                                <p>
-                        </article>
-                        <article class="thumb">
-                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/cosplay/kda5-min.jpg"
-                                        class="image">
-                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/cosplay/kda5-min.jpg"
-                                                alt="">
-                                </a>
-                                <h2></h2>
-                                <p>
-                        </article>
-                        <article class="thumb">
-                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/cosplay/kda6-min.jpg"
-                                        class="image">
-                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/cosplay/kda6-min.jpg"
-                                                alt="">
-                                </a>
-                                <h2></h2>
-                                <p>
-                        </article>
-                        <article class="thumb">
-                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/cosplay/niko1-min.jpg"
-                                        class="image">
-                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/cosplay/niko1-min.jpg"
-                                                alt="">
-                                </a>
-                                <h2>Nico Yazawa 花妖精 by 黎湮</h2>
-                                <p>
-                        </article>
-                        <article class="thumb">
-                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/cosplay/niko2-min.jpg"
-                                        class="image">
-                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/cosplay/niko2-min.jpg"
-                                                alt="">
-                                </a>
-                                <h2></h2>
-                                <p>
-                        </article>
-                        <article class="thumb">
-                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/cosplay/niko3-min.jpg"
-                                        class="image">
-                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/cosplay/niko3-min.jpg"
-                                                alt="">
-                                </a>
-                                <h2></h2>
-                                <p>
-                        </article>
-                </div>
+<body>
+    <!-- Wrapper -->
+    <div id="wrapper">
+        <!-- Header -->
+        <header id="header">
+            <h1>
+                <strong>Frankie Portrait</strong> Cosplay
+            </h1>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="https://frankieyuan.com/photo.html" class="icon fa-home">
+                            Home
+                            Page
+                        </a>
+                </ul>
+            </nav>
+        </header>
+        <!-- Main -->
+        <div id="main">
+            <article class="thumb">
+                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/cosplay/kda1-min.jpg"
+                   class="image">
+                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/cosplay/kda1-min.jpg"
+                         alt="">
+                </a>
+                <h2>KDA Widow by 爆炸糖</h2>
+                <p>
+            </article>
+            <article class="thumb">
+                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/cosplay/kda2-min.jpg"
+                   class="image">
+                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/cosplay/kda2-min.jpg"
+                         alt="">
+                </a>
+                <h2></h2>
+                <p>
+            </article>
+            <article class="thumb">
+                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/cosplay/kda3-min.jpg"
+                   class="image">
+                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/cosplay/kda3-min.jpg"
+                         alt="">
+                </a>
+                <h2></h2>
+                <p>
+            </article>
+            <article class="thumb">
+                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/cosplay/kda4-min.jpg"
+                   class="image">
+                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/cosplay/kda4-min.jpg"
+                         alt="">
+                </a>
+                <h2></h2>
+                <p>
+            </article>
+            <article class="thumb">
+                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/cosplay/kda5-min.jpg"
+                   class="image">
+                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/cosplay/kda5-min.jpg"
+                         alt="">
+                </a>
+                <h2></h2>
+                <p>
+            </article>
+            <article class="thumb">
+                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/cosplay/kda6-min.jpg"
+                   class="image">
+                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/cosplay/kda6-min.jpg"
+                         alt="">
+                </a>
+                <h2></h2>
+                <p>
+            </article>
+            <article class="thumb">
+                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/cosplay/niko1-min.jpg"
+                   class="image">
+                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/cosplay/niko1-min.jpg"
+                         alt="">
+                </a>
+                <h2>Nico Yazawa 花妖精 by 黎湮</h2>
+                <p>
+            </article>
+            <article class="thumb">
+                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/cosplay/niko2-min.jpg"
+                   class="image">
+                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/cosplay/niko2-min.jpg"
+                         alt="">
+                </a>
+                <h2></h2>
+                <p>
+            </article>
+            <article class="thumb">
+                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/cosplay/niko3-min.jpg"
+                   class="image">
+                    <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/cosplay/niko3-min.jpg"
+                         alt="">
+                </a>
+                <h2></h2>
+                <p>
+            </article>
         </div>
-        <!-- Scripts -->
-        <script src="assets/js/main.js"></script>
+    </div>
+    <!-- Scripts -->
+    <script src="assets/js/main.js"></script>
+    <script src="assets/js/jquery.poptrox.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <link rel="stylesheet" href="assets/css/main.css">
+    <noscript>
+        <link rel="stylesheet" href="assets/css/noscript.css">
+    </noscript>
