--- a/hyphoto/lolita.html
+++ b/hyphoto/lolita.html
@@ -2,18 +2,13 @@
 <title>Lolita - Frankie Portrait</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-<link rel="stylesheet" href="assets/css/main.css">
-<noscript>
-    <link rel="stylesheet" href="assets/css/noscript.css">
-</noscript>
+
 <!-- Scripts -->
 <script src="assets/js/jquery.min.js"></script>
-<script src="assets/js/jquery.poptrox.min.js"></script>
 <script src="assets/js/browser.min.js"></script>
 <script src="assets/js/breakpoints.min.js"></script>
-<script src="assets/js/util.js"></script>
 
-<body class="is-preload">
+<body>
     <!-- Wrapper -->
     <div id="wrapper">
         <!-- Header -->
@@ -253,3 +248,9 @@
     </div>
     <!-- Scripts -->
     <script src="assets/js/main.js"></script>
+    <script src="assets/js/jquery.poptrox.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <link rel="stylesheet" href="assets/css/main.css">
+    <noscript>
+        <link rel="stylesheet" href="assets/css/noscript.css">
+    </noscript>
