--- a/hyphoto/jk.html
+++ b/hyphoto/jk.html
@@ -4,10 +4,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 <!-- Scripts -->
 <script src="assets/js/jquery.min.js"></script>
+<script src="assets/js/jquery.poptrox.min.js"></script>
 <script src="assets/js/browser.min.js"></script>
 <script src="assets/js/breakpoints.min.js"></script>
 
-<body>
+<body">
     <!-- Wrapper -->
     <div id="wrapper">
         <!-- Header -->
@@ -220,9 +221,9 @@
     </div>
     <!-- Scripts -->
     <script src="assets/js/main.js"></script>
-    <script src="assets/js/jquery.poptrox.min.js"></script>
     <script src="assets/js/util.js"></script>
     <link rel="stylesheet" href="assets/css/main.css">
+
     <noscript>
         <link rel="stylesheet" href="assets/css/noscript.css">
     </noscript>
