--- a/idflakies.html
+++ b/idflakies.html
@@ -34,11 +34,22 @@
                         <h3>Research @UIUC</h3>
                     </header>
                     <p>
-                        work with Ph.D. researchers to build a java Continuous Integration testing framework for detecting, classifying, and fixing flaky tests, a type of nondeterministic tests that could pass or fail even when the code under test not changed
-                        <p>Github Repository: github.com/idflakies/iDFlakies
+                        Since Spring 2019, I am working with Wing Lam, a Ph.D. student at the University of Illionis at Urbana-Champaign, to build a java Continuous Integration testing framework for detecting, classifying, and fixing flaky tests.
+
+                        <object data="" type="application/pdf" width="95%" height="700px">
+                            <embed src="https://frankieyuan.com/images/PURE-posters.pdf">
+                    <p>This browser does not support PDFs. Please download the PDF to view it: <a href="https://frankieyuan.com/images/PURE-posters.pdf">Download PDF</a>.</p>
+                    </embed>
+                    </object>
+
+                    <p>
+                        Github Repository: <a href="http://github.com/idflakies/iDFlakies" target="_blank"> github.com/idflakies/iDFlakies </a>
+                    <p>
+                        iDFlakie Dataset: <a href="https://sites.google.com/view/flakytestdataset/" target="_blank"> sites.google.com/view/flakytestdataset/</a>
+                    <p>Wing's personal page: <a href="http://winglam2.web.engr.illinois.edu/" target="_blank">winglam2.web.engr.illinois.edu </a>
 
 
-</div>
+                </div>
             </section>
         </div><!-- Footer -->
         <footer id="footer">
