--- a/idflakies.html
+++ b/idflakies.html
@@ -35,14 +35,13 @@
                     </header>
                     <p>
                         Since Spring 2019, I am working with Wing Lam, a Ph.D. student at the University of Illionis at Urbana-Champaign, to build a java Continuous Integration testing framework for detecting, classifying, and fixing flaky tests.
-
-                        <object data="" type="application/pdf" width="95%" height="700px">
-                            <embed src="https://frankieyuan.com/images/PURE-posters.pdf">
-                    <p>This browser does not support PDFs. Please download the PDF to view it: <a href="https://frankieyuan.com/images/PURE-posters.pdf">Download PDF</a>.</p>
-                    </embed>
-                    </object>
-
-                    <p>
+                        
+                        <a href="images/PURE-poster.pdf" target="_blank">
+                            <span class="image main">
+                                <img src="images/PURE-poster.jpg" alt="">
+                            </span>
+                        </a>
+<p>
                         Github Repository: <a href="http://github.com/idflakies/iDFlakies" target="_blank"> github.com/idflakies/iDFlakies </a>
                     <p>
                         iDFlakie Dataset: <a href="https://sites.google.com/view/flakytestdataset/" target="_blank"> sites.google.com/view/flakytestdataset/</a>
